Added a colour palette

--- a/Spryt/MainForm.resx
+++ b/Spryt/MainForm.resx
@@ -123,6 +123,48 @@
   <metadata name="statusStrip.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>17, 17</value>
   </metadata>
+  <metadata name="fileImageList.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
+    <value>365, 17</value>
+  </metadata>
+  <data name="fileImageList.ImageStream" mimetype="application/x-microsoft.net.object.binary.base64">
+    <value>
+        AAEAAAD/////AQAAAAAAAAAMAgAAAFdTeXN0ZW0uV2luZG93cy5Gb3JtcywgVmVyc2lvbj00LjAuMC4w
+        LCBDdWx0dXJlPW5ldXRyYWwsIFB1YmxpY0tleVRva2VuPWI3N2E1YzU2MTkzNGUwODkFAQAAACZTeXN0
+        ZW0uV2luZG93cy5Gb3Jtcy5JbWFnZUxpc3RTdHJlYW1lcgEAAAAERGF0YQcCAgAAAAkDAAAADwMAAAB2
+        BwAAAk1TRnQBSQFMAwEBAAHwAQAB8AEAARABAAEQAQAE/wEhAQAI/wFCAU0BNgcAATYDAAEoAwABQAMA
+        ARADAAEBAQABIAYAARAWAAM+AWsCWAFWAbwDXQHtAW4BZgFRAfcBbgFmAVEB9wFuAWYBUQH3AW4BZQFR
+        AfcBbgFlAVEB9wFtAWUBUQH3AW0BZQFRAfcBbQFkAVEB9wJiAVgB7wJaAVcBvQM7AWPIAAJgAVoB3gNn
+        AfIBtAGwAawB/QH2AesB3gH/AfYB6gHeAf8B9gHqAdwB/wH2AeoB3AH/AfoB8wHrAf8B+gHzAesB/wH6
+        AfIB6gH/AfwB9wHzAf8BtQG0AbMB/QNdAfACXgFaAdXIAAFkAVkBQgH1AboBsAGkAf4B/QG/AUoB/wH8
+        Ab0BSQH/AfsBvgFHAf8B/AG+AUYB/wH8Ab4BRgH/AfwBvQFEAf8B+wG9AUUB/wH7AbwBQwH/AfwBvgFC
+        Af8B/AG8AUQB/wG2AbUBtAH9Al8BTAHzyAABcQFtAVEC9wHtAeMB/wH9AcIBUAL/AdgBoAL/AdcBngL/
+        AdYBmwL/AdcBmAL/AdYBlgL/AdYBlQL/AdUBlAL/AdQBkwH/AfsBvgFHAf8B+wH3AfQB/wFuAWcBUQH3
+        yAABcQFtAVEC9wHwAeYB/wH4AbQBNwH/AfcBtAE4Af8B9wG1ATYB/wH4AbQBNQH/AfgBsgE1Af8B9wGz
+        ATQB/wH3AbMBNAH/AfcBsgEzAf8B9wGyATEB/wH3AbIBMQH/AfwB+QH1Af8BbgFtAVEB98gAAXQBbQFR
+        AfcB+AHxAegB/wH+AeUB1QH/Af0B5QHTAf8B/QHlAdMB/wH8AeUB0wH/AfwB5QHTAf8B/AHkAdEB/wH8
+        AeIBzgH/AfwB4gHMAf8B+wHgAckB/wH7AeEByAH/Af0B+gH3Af8BcQFtAVEB98gAAXQBbQFRAfcB+AHy
+        AesB/wH+AecB1gH/Af0B5wHWAf8B/QHnAdYB/wH9AecB1gH/Af0B5gHVAf8B/QHlAdMB/wH8AeQB0QH/
+        AfwB4gHNAf8B+wHhAcsB/wH7AeEByQH/AfsB9wHyAf8BdAFtAVEB98gAAXQBbQFRAfcB+QHzAewB/wH+
+        AegB1gH/Af4B6AHXAf8B/QHnAdYB/wH9AecB1gH/Af0B5wHVAf8B/QHlAdMB/wH7AeQB0AH/AfsB4wHM
+        Af8B+gHfAccB/wH6Ad8BxgH/AfoB8gHqAf8BdAFtAVEB98gAAXQBbQFRAfcB+QH0Ae0B/wH+AegB2AH/
+        Af4B6AHYAf8B/gHoAdcB/wH+AecB1gH/Af0B5QHTAf8B/AHkAdEB/wH7AeEBzAH/AfoB4AHHAf8B+QHd
+        AcMB/wH4AdwBwgH/AfoB9AHtAf8BdAFtAVEB98gAAXQBbQFRAfcB+QH0Ae8B/wH+AecB1wH/Af0B5wHW
+        Af8B/QHnAdUB/wH9AeYB1AH/AfwB5gHSAf8B+wHhAcwB/wH6Ad8BxwH/AfgB3AHCAf8B9gHaAb0B/wH2
+        AdgBuwH/AfoB9AHvAf8BdAFtAVEB98gAAXQBbQFRAfcB+QH0AfAB/wH8AeYB0wH/AfwB5gHUAf8B/QHn
+        AdMB/wH8AeQB0QH/AfsB4wHNAf8B+gHgAcgB/wH4AdwBwgH/AfUB1gG7Af8B8wHUAbUB/wHxAdIBswH/
+        AfgB9AHwAf8BcQFtAVEB98gAAXQBbQFRAfcB+QH1AfEB/wH8AeMBzwH/AfsB5AHQAf8B/AHkAc8B/wH8
+        AeMBzQH/AfoB4QHKAf8B+QHdAcQB/wH2AdkBvAH/AfQB6QHfAf8B9wHyAewB/wH7AfcB8wH/AfUB7wHp
+        Af8BhgFfAUUB+8gAAmIBSQH2AfkB9QHxAf8B/AHjAc0B/wH7AeMBzgH/AfsB4wHNAf8B+wHiAcsB/wH5
+        AeAByAH/AfgB3AHCAf8B9QHWAboB/wH9AfsB+AH/AfwB5gHNAf8B+gHlAckB/wHiAbYBhAH/AlQBUgGm
+        yAACXAFVAeoBmwGaAZcB/AH6AeABxwH/AfsB4QHJAf8B+wHiAckB/wH7AeAByAH/AfkB3wHFAf8B+AHb
+        AcEB/wH0AdYBuAL/AfsB+AH/AfYB2AG0Af8B4QGwAV8B/wNiAfYDBQEHyAACWwFZAcMDZAHsAZoBlwGU
+        AfwB+AH0Ae0B/wH4AfMB7QH/AfgB8wHtAf8B+AHzAe0B/wH4AfIB7AH/AfcB8gHsAf8B8gHmAdcB/wHi
+        AbIBXwH/AWgCWQH1AwUBB8wAAzoBYAJYAVYBuwJhAVQB7gJiAUkB9gF0AW0BUQH3AXQBbQFRAfcBdAFt
+        AVEB9wF0AW0BUQH3AXQBbQFRAfcCYAFcAdQCTQFMAZEDBAEGzAABQgFNAT4HAAE+AwABKAMAAUADAAEQ
+        AwABAQEAAQEFAAGAFwAD/wEAAYABAQYAAYABAQYAAYABAQYAAYABAQYAAYABAQYAAYABAQYAAYABAQYA
+        AYABAQYAAYABAQYAAYABAQYAAYABAQYAAYABAQYAAYABAQYAAYABAQYAAYABAwYAAYABBwYACw==
+</value>
+  </data>
   <metadata name="toolsImageList.TrayLocation" type="System.Drawing.Point, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a">
     <value>234, 17</value>
   </metadata>
@@ -130,73 +172,95 @@
     <value>
         AAEAAAD/////AQAAAAAAAAAMAgAAAFdTeXN0ZW0uV2luZG93cy5Gb3JtcywgVmVyc2lvbj00LjAuMC4w
         LCBDdWx0dXJlPW5ldXRyYWwsIFB1YmxpY0tleVRva2VuPWI3N2E1YzU2MTkzNGUwODkFAQAAACZTeXN0
-        ZW0uV2luZG93cy5Gb3Jtcy5JbWFnZUxpc3RTdHJlYW1lcgEAAAAERGF0YQcCAgAAAAkDAAAADwMAAABo
-        DwAAAk1TRnQBSQFMAgEBBQEAARgBAAEYAQABEAEAARABAAT/ARkBAAj/AUIBTQE2BwABNgMAASgDAAFA
-        AwABIAMAAQEBAAEYBgABGP8AmQAB2gGUAWsB2QGSAWgB2AGQAWYB2AGOAWQB1gGMAWIB1QGJAWEB1QGJ
-        AV8B1QGGAV0B1AGFAVsB1AGFAVoB0gGDAVkB0gGDAVicAAHcAZgBbwHjAa8BjwHjAa0BjQHiAasBiwHh
-        AaoBigHhAagBiAHgAacBhwHfAaUBhQHfAaQBhAHeAaMBgwHeAaIBgQHUAYUBWpwAAd0BmwFzAeQBsQGS
-        AeQBrwGRAeMBrgGPAeMBrAGNAeEBqwGLAeEBqQGJAeEBqAGIAeABpwGGAd8BpQGFAd8BowGEAdQBhgFd
-        nAAB3gGfAXcB5QG0AZUB5AGzAZMB5AGxAZIB4wGvAZAB4wGuAY4B4gGsAY0B4QGqAYsB4QGpAYkB4AGn
-        AYcB3wGmAYYB1QGJAV+cAAHhAaIBewHmAbcBmAHmAbUBlgHlAbQBlAHkAbIBkgHkAbEBkQHjAa8BjwHj
-        Aa0BjQHiAawBjAHhAaoBigHhAakBiQHWAYwBYpwAAeEBpgF/AegBugGbAecBuAGZAeYBtgGXAeYBtQGW
-        AeUBswGUAeQBsQGSAeQBrwGRAeMBrgGPAeMBrQGNAeIBqwGLAdgBjgFmnAAB4wGqAYEB6QG8AZ4B6AG7
-        AZwB6AG5AZoB5wG4AZkB5gG2AZcB5gG0AZUB5AGzAZQB5AGxAZIB4wGvAZAB4wGuAY8B2QGSAWqcAAHj
-        AawBhQHqAb8BoAHqAb4BnwHoAbwBnQHoAboBnAHoAbkBmgHmAbcBmAHmAbYBlgHlAbQBlAHkAbMBkwHk
-        AbEBkQHaAZYBbJwAAeUBrwGGAesBwQGiAeoBwAGiAeoBvgGgAekBvQGeAegBvAGdAegBugGbAecBuAGZ
-        AeYBtgGYAeYBtQGWAeUBswGUAdwBmgFwnAAB5QGyAYkB6wHDAaUB6wHCAaMB6wHAAaIB6gG/AaEB6gG+
-        AaAB6QG9AZ4B6AG7AZ0B6AG6AZsB5wG4AZkB5gG2AZcB3gGdAXWcAAHmAbMBjAHsAcQBpgHrAcQBpQHr
-        AcIBpAHrAcIBowHqAcABogHqAb8BoAHqAb4BnwHoAbwBngHoAbsBnAHoAbkBmgHeAaIBeJwAAeYBswGM
-        AeYBswGMAeYBswGMAeUBsgGKAeUBsgGJAeUBrwGGAeUBrgGGAeMBrAGFAeMBqwGDAeMBqQGAAeEBpwF/
-        AeEBpQF8/wD/ADAAA/4DkQOhA9AeAAPlA/5LAAHxAe4B6gHWAbsBnwMAAeUB2AHMAc8BqgGFAwAB5QHY
-        AcwBzgGqAYYDAAHnAdwB0QHTAbQBlQMAAekB3wHWAeQB1wHKGwAD5AOqA9sDhQP+GAADygOfA6ID/hgA
-        ARMBQAFYARUBQgFeASUBaQGcASwBdgG0AZsBwAHWHgAB7AHkAd0DAAHlAdkBzQHPAaoBhQMAAeUB2AHM
-        Ac8BqgGFAwAB5QHYAcwBzwGqAYUDAAHlAdgBzAHPAaoBhQMAAecB3AHRAegB3gHUDAAD/QkAA5oD2wO3
-        A9MYAAPPA7ED5QOsA6ID/hUAARIBQgFZAV0BnAHUAaYBzwH1AakBzwHsAUgBiwHBASwBdgG0GwAB6AHe
-        AdQBzwGsAYgDAAHlAdgBzAHPAaoBhQMAAeUB2AHMAc8BqgGFAwAB5QHYAcwBzwGqAYUDAAHlAdgBzAHP
-        AaoBhQMAAecB3QHTDAADugP5AwAD6wOtA/IDhgP8FQAD0wO6A+AD0wPaA6sDogP+BgAB6gHiAdcJAAEe
-        AW0BkwHLAeMB+QFhAaoB7AFAAZgB6AEVAWcBwgEWAWABqgEsAXYBtBsAAeUB2AHMAc8BqgGFAwAB5QHY
-        AcwBzwGqAYUDAAHlAdgBzAHPAaoBhQMAAeUB2AHMAc8BqgGFAwAB5QHYAcwBzwGqAYUPAAOgA6oD8wOo
-        A9kDwQPHFQAD2APDA+cD2wPRA88D0AOaA6MD/gMAAboBjgFUAdABtQGRBgABHgFtAZMByAHhAfIB0QHn
-        AfoBNAF9AbUBMQGZAcMBbQHEAdwBSgGcAc8BNAGDAccVAAHPAaoBhQMAAeUB2AHMAc8BqgGFAwAB5QHY
-        AcwBzwGqAYUDAAHlAdgBzAHPAaoBhQMAAeUB2AHMAc8BqgGFAwAB5QHYAcwBzwGqAYUMAAOkA9cDogPQ
-        A+4DkQP6BgAG/QYAA9wDywPwA+4D6gPYA9ID0APAA5QDogP+AbwBkwFeAbsBkAFZAfYB9QHyAwAB9wH4
-        AfkBJgGJAbkBsAHLAeEBZwGpAcgBYAHcAfUBRAHWAfQBjgHuAfoBXQG0AeYBOwGPAdkSAAHlAdgBzAHP
-        AaoBhQMAAeUB2AHMAc8BqgGFAwAB5QHYAcwBzwGqAYUDAAHlAdgBzAHPAaoBhQMAAeUB2AHMAc8BqgGF
-        AwAB5QHYAcwMAAOpA/ID5QPiA+MDnAOxA5IDiQPMBgAD4wPTA+kD3gPdA+wD6wPZA9QD0QO2A5ADowG+
-        AZkBaQHRAaYBbAHkAdkByQkAASYBiQG5Ab4B5gHyAbMB9AH8AWAB3AH1AUQB1gH0AY4B7gH6AV0BtAHm
-        ATsBjwHZEgAB5QHYAcwBzwGqAYUDAAHlAdgBzAHPAaoBhQMAAeUB2AHMAc8BqgGFAwAB5QHYAcwBzwGq
-        AYUDAAHlAdgBzAHPAaoBhQ8AA60D7gPhA98D4APnA+QDuwPPCQAD5gPXA/ED3APZA9wD6wPjA9wD1wO5
-        A7cBjwGCAXQBzgGsAX4BxQGlAX0D+wwAAScBkAG/AcMB7QH4AbMB9AH8AWAB3AH1AUQB1gH0AY4B7gH6
-        AV0BtAHmATsBjwHZDAABzwGqAYUDAAHlAdgBzAHPAaoBhQMAAeUB2AHMAc8BqgGFAwAB5QHYAcwBzwGq
-        AYUDAAHlAdgBzAHPAaoBhQMAAeUB2AHMAc8BqgGFDAADsQPwA+QG4gPnA8ED0w8AA+UD1wPsA9oByAGz
-        AaUBuwGXAX8BzAG2AakD5QPjA78BnQGRAYIBwgGqAYkB1wG3AY4B5gHeAdQD/A8AAS8BugHkAcMB7QH4
-        AbMB9AH8AWAB3AH1AUQB1gH0AY4B7gH6AV0BtAHmATsBjwHZCQAB5QHYAcwBzwGqAYUDAAHlAdgBzAHP
-        AaoBhQMAAeUB2AHMAc8BqgGFAwAB5QHYAcwBzwGqAYUDAAHlAdgBzAHPAaoBhQMAAeUB2AHMDAADtQPy
-        A+gD5wPqA8YD1hUAA+UD1wPsAb0BlwF9AdABxgG/AbgBkAF2A+QD7QGwAaUBmAHZAcYBrAHbAcQBpgHV
-        AcUBswH3AfYB9AL9AfwSAAEvAboB5AHDAe0B+AGzAfQB/AFgAdwB9QFEAdYB9AGOAe4B+gFdAbQB5gE7
-        AY8B2QkAAeUB2AHMAc8BqgGFAwAB5QHYAcwBzwGqAYUDAAHlAdgBzAHPAaoBhQMAAeUB2AHMAc8BqgGF
-        AwAB5QHYAcwBzwGqAYUPAAO5A/QD7APtA8sD2hsAA+YB1wHVAdQBrQFtATsBpQFdASwBoQFXAScB5AHb
-        AdUBugGyAagByQG8Aa0B1AHKAb4B4wHdAdUC/AH7GwABLwG6AeQBwwHtAfgBswH0AfwBaAHZAfUBbwHP
-        AfMBWQGdAdABcwGrAd0BTwGRAckDAAHPAaoBhQMAAeUB2AHMAc8BqgGFAwAB5QHYAcwBzwGqAYUDAAHl
-        AdgBzAHPAaoBhQMAAeUB2AHMAc8BqgGFAwAB5QHYAcwBzwGqAYUMAAO9A/cD7wPQA90hAAHkAeIB4AGw
-        AW0BNwG/AYcBXwGpAWMBNAHAAaoBnAPkKgABLwG6AeQBwwHtAfgBqAHiAfgBbAGuAd0BpQHPAfQBpQHP
-        AfQBvQHbAfcBXAGYAc4B5QHYAcwBzwGqAYUDAAHlAdgBzAHPAaoBhQMAAeUB2AHMAc8BqgGFAwAB5QHY
-        AcwBzwGqAYUDAAHlAdgBzAHPAaoBhQMAAeUB2QHNDAADwQP3A9UD3yQAA/wBtwF3AT8BxwGWAW4BrwFu
-        ATwB1wHKAcEwAAEvAboB5AGnAdQB9AHFAeEB+AHMAeMB+QHMAeMB+QG9AdsB9wFRAZIByQMAAeUB2AHM
-        Ac8BqgGFAwAB5QHYAcwBzwGqAYUDAAHlAdgBzAHPAaoBhQMAAeUB2AHMAc8BqgGFAwAB5QHYAcwBzwGq
-        AYUPAAPEA9kD4ycAA/wBvgGAAUYBzwGlAXsBtwF5AUYB7gHoAeQzAAFQAagB2QFqAaUB2AHJAeEB9wHL
-        AeMB+AFCAZUBygGVAbsB2QHPAawBiAMAAeUB2AHMAc8BqgGFAwAB5QHYAcwBzwGqAYUDAAHlAdgBzAHP
-        AaoBhQMAAeUB2AHMAc8BqgGFAwAB5QHZAc0B2QHCAasMAAPIA+UqAAP+AcMBhQFLAdIBqwGAAb0BgQFM
-        AfEB7QHpMwAD/QFnAbQB3QFSAZUBygFOAZAByAFbAa8B2AH5AfoB+wHrAeMB2wHQAbABjwMAAeUB2AHM
-        Ac8BqgGFAwAB5QHYAcwBzwGqAYUDAAHlAdgBzAHPAaoBhQMAAeUB2AHMAc4BqwGHAwAB8gHuAeoMAAPn
-        MAAB5wHYAcoBwwGJAU8B1wG5AZ0D/kgAAe4B6AHiAdABsAGPAwAB5QHYAcwBzwGqAYUDAAHlAdgBzAHP
-        AaoBhQMAAeUB2AHMAc8BqgGFAwAB6AHeAdQB5QHaAc4DAAFCAU0BPgcAAT4DAAEoAwABQAMAASADAAEB
-        AQABAQYAAQEWAAP/AQAC/wYAAv8GAAHAAQMGAAHAAQMGAAHAAQMGAAHAAQMGAAHAAQMGAAHAAQMGAAHA
-        AQMGAAHAAQMGAAHAAQMGAAHAAQMGAAHAAQMGAAHAAQMGAAL/BgAC/wYAAf8BDwH8A/8BkgFJAf8BBwH4
-        AX8BgwH/AUkBJAH3AQ8B8AE/AYEB/wEkAZIB8gEPAeABGwGAAf8BkgFJAfABHwHAAQkBgAF/AUkBJAHw
-        ARkBgAEAAYABPwEkAZIB8AEDAgAB4AEfAZIBSQHwAQcCAAHwAQ8BSQEkAfABDwGAAQAB+AEHASQBkgHw
-        AR8BwAEAAfwBAwGSAUkB8AE/AeABAwH+AQEBSQEkAfABfwHwAT8B/wEAASQBkgHwAf8B8AF/Af8BgAGS
-        AUkB8QH/AfABfwH/AcABSQEkAfMB/wHwAX8B/wHAASQBkgH3Af8B+AF/Av8BkgFJCw==
+        ZW0uV2luZG93cy5Gb3Jtcy5JbWFnZUxpc3RTdHJlYW1lcgEAAAAERGF0YQcCAgAAAAkDAAAADwMAAACA
+        FAAAAk1TRnQBSQFMAgEBBQEAAfABAAHwAQABEAEAARABAAT/ASEBAAj/AUIBTQE2BwABNgMAASgDAAFA
+        AwABIAMAAQEBAAEgBgABIP8A/wAcAAHaAZQBTQH/AdkBkgFKAf8B2AGQAUgB/wHYAY4BRgH/AdYBjAFE
+        Af8B1QGJAUMB/wHVAYkBQQH/AdUBhgE/Af8B1AGFAT0B/wHUAYUBPAH/AdIBgwE7Af8B0gGDAToB/9AA
+        AdwBmAFRAf8B4wGvAY8B/wHjAa0BjQH/AeIBqwGLAf8B4QGqAYoB/wHhAagBiAH/AeABpwGHAf8B3wGl
+        AYUB/wHfAaQBhAH/Ad4BowGDAf8B3gGiAYEB/wHUAYUBPAH/0AAB3QGbAVUB/wHkAbEBkgH/AeQBrwGR
+        Af8B4wGuAY8B/wHjAawBjQH/AeEBqwGLAf8B4QGpAYkB/wHhAagBiAH/AeABpwGGAf8B3wGlAYUB/wHf
+        AaMBhAH/AdQBhgE/Af/QAAHeAZ8BWQH/AeUBtAGVAf8B5AGzAZMB/wHkAbEBkgH/AeMBrwGQAf8B4wGu
+        AY4B/wHiAawBjQH/AeEBqgGLAf8B4QGpAYkB/wHgAacBhwH/Ad8BpgGGAf8B1QGJAUEB/9AAAeEBogFd
+        Af8B5gG3AZgB/wHmAbUBlgH/AeUBtAGUAf8B5AGyAZIB/wHkAbEBkQH/AeMBrwGPAf8B4wGtAY0B/wHi
+        AawBjAH/AeEBqgGKAf8B4QGpAYkB/wHWAYwBRAH/0AAB4QGmAWEB/wHoAboBmwH/AecBuAGZAf8B5gG2
+        AZcB/wHmAbUBlgH/AeUBswGUAf8B5AGxAZIB/wHkAa8BkQH/AeMBrgGPAf8B4wGtAY0B/wHiAasBiwH/
+        AdgBjgFIAf/QAAHjAaoBgQH/AekBvAGeAf8B6AG7AZwB/wHoAbkBmgH/AecBuAGZAf8B5gG2AZcB/wHm
+        AbQBlQH/AeQBswGUAf8B5AGxAZIB/wHjAa8BkAH/AeMBrgGPAf8B2QGSAUwB/9AAAeMBrAGFAf8B6gG/
+        AaAB/wHqAb4BnwH/AegBvAGdAf8B6AG6AZwB/wHoAbkBmgH/AeYBtwGYAf8B5gG2AZYB/wHlAbQBlAH/
+        AeQBswGTAf8B5AGxAZEB/wHaAZYBTgH/0AAB5QGvAYYB/wHrAcEBogH/AeoBwAGiAf8B6gG+AaAB/wHp
+        Ab0BngH/AegBvAGdAf8B6AG6AZsB/wHnAbgBmQH/AeYBtgGYAf8B5gG1AZYB/wHlAbMBlAH/AdwBmgFS
+        Af/QAAHlAbIBiQH/AesBwwGlAf8B6wHCAaMB/wHrAcABogH/AeoBvwGhAf8B6gG+AaAB/wHpAb0BngH/
+        AegBuwGdAf8B6AG6AZsB/wHnAbgBmQH/AeYBtgGXAf8B3gGdAVcB/9AAAeYBswGMAf8B7AHEAaYB/wHr
+        AcQBpQH/AesBwgGkAf8B6wHCAaMB/wHqAcABogH/AeoBvwGgAf8B6gG+AZ8B/wHoAbwBngH/AegBuwGc
+        Af8B6AG5AZoB/wHeAaIBWgH/0AAB5gGzAYwB/wHmAbMBjAH/AeYBswGMAf8B5QGyAYoB/wHlAbIBiQH/
+        AeUBrwGGAf8B5QGuAYYB/wHjAawBhQH/AeMBqwGDAf8B4wGpAYAB/wHhAacBYQH/AeEBpQFeAf//AP8A
+        6gAD/gH/A5EB/wOhAf8D0AH/KAAD5QH/A/4B/2QAAfEB7gHqAf8B1gG7AZ8B/wQAAeUB2AHMAf8BzwGq
+        AYUB/wQAAeUB2AHMAf8BzgGqAYYB/wQAAecB3AHRAf8B0wG0AZUB/wQAAekB3wHWAf8B5AHXAcoB/yQA
+        A+QB/wOqAf8D2wH/A4UB/wP+Af8gAAPKAf8DnwH/A6IB/wP+Af8hAAEiAToB/wEAASQBQAH/AQcBSwGc
+        Af8BDgFYAbQB/wGbAcAB1gH/KAAB7AHkAd0B/wQAAeUB2QHNAf8BzwGqAYUB/wQAAeUB2AHMAf8BzwGq
+        AYUB/wQAAeUB2AHMAf8BzwGqAYUB/wQAAeUB2AHMAf8BzwGqAYUB/wQAAecB3AHRAf8B6AHeAdQB/xAA
+        A/0B/wwAA5oB/wPbAf8DtwH/A9MB/yAAA88B/wOxAf8D5QH/A6wB/wOiAf8D/gH/HQABJAE7Af8BPwGc
+        AdQB/wGmAc8B9QH/AakBzwHsAf8BKgGLAcEB/wEOAVgBtAH/JAAB6AHeAdQB/wHPAawBiAH/BAAB5QHY
+        AcwB/wHPAaoBhQH/BAAB5QHYAcwB/wHPAaoBhQH/BAAB5QHYAcwB/wHPAaoBhQH/BAAB5QHYAcwB/wHP
+        AaoBhQH/BAAB5wHdAdMB/xAAA7oB/wP5Af8EAAPrAf8DrQH/A/IB/wOGAf8D/AH/HAAD0wH/A7oB/wPg
+        Af8D0wH/A9oB/wOrAf8DogH/A/4B/wgAAeoB4gHXAf8NAAFPAZMB/wHLAeMB+QH/AUMBqgHsAf8BIgGY
+        AegB/wEAAUkBwgH/AQABQgGqAf8BDgFYAbQB/yQAAeUB2AHMAf8BzwGqAYUB/wQAAeUB2AHMAf8BzwGq
+        AYUB/wQAAeUB2AHMAf8BzwGqAYUB/wQAAeUB2AHMAf8BzwGqAYUB/wQAAeUB2AHMAf8BzwGqAYUB/xQA
+        A6AB/wOqAf8D8wH/A6gB/wPZAf8DwQH/A8cB/xwAA9gB/wPDAf8D5wH/A9sB/wPRAf8DzwH/A9AB/wOa
+        Af8DowH/A/4B/wQAAboBjgE2Af8B0AG1AZEB/wkAAU8BkwH/AcgB4QHyAf8B0QHnAfoB/wEWAV8BtQH/
+        ARMBmQHDAf8BTwHEAdwB/wEsAZwBzwH/ARYBgwHHAf8cAAHPAaoBhQH/BAAB5QHYAcwB/wHPAaoBhQH/
+        BAAB5QHYAcwB/wHPAaoBhQH/BAAB5QHYAcwB/wHPAaoBhQH/BAAB5QHYAcwB/wHPAaoBhQH/BAAB5QHY
+        AcwB/wHPAaoBhQH/EAADpAH/A9cB/wOiAf8D0AH/A+4B/wORAf8D+gH/CAAD/QH/A/0B/wgAA9wB/wPL
+        Af8D8AH/A+4B/wPqAf8D2AH/A9IB/wPQAf8DwAH/A5QB/wOiAf8D/gH/AbwBkwFAAf8BuwGQATsB/wH2
+        AfUB8gH/BAAB9wH4AfkB/wEIAYkBuQH/AbABywHhAf8BSQGpAcgB/wFCAdwB9QH/ASYB1gH0Af8BjgHu
+        AfoB/wE/AbQB5gH/AR0BjwHZAf8YAAHlAdgBzAH/Ac8BqgGFAf8EAAHlAdgBzAH/Ac8BqgGFAf8EAAHl
+        AdgBzAH/Ac8BqgGFAf8EAAHlAdgBzAH/Ac8BqgGFAf8EAAHlAdgBzAH/Ac8BqgGFAf8EAAHlAdgBzAH/
+        EAADqQH/A/IB/wPlAf8D4gH/A+MB/wOcAf8DsQH/A5IB/wOJAf8DzAH/CAAD4wH/A9MB/wPpAf8D3gH/
+        A90B/wPsAf8D6wH/A9kB/wPUAf8D0QH/A7YB/wOQAf8DowH/Ab4BmQFLAf8B0QGmAU4B/wHkAdkByQH/
+        DAABCAGJAbkB/wG+AeYB8gH/AbMB9AH8Af8BQgHcAfUB/wEmAdYB9AH/AY4B7gH6Af8BPwG0AeYB/wEd
+        AY8B2QH/GAAB5QHYAcwB/wHPAaoBhQH/BAAB5QHYAcwB/wHPAaoBhQH/BAAB5QHYAcwB/wHPAaoBhQH/
+        BAAB5QHYAcwB/wHPAaoBhQH/BAAB5QHYAcwB/wHPAaoBhQH/FAADrQH/A+4B/wPhAf8D3wH/A+AB/wPn
+        Af8D5AH/A7sB/wPPAf8MAAPmAf8D1wH/A/EB/wPcAf8D2QH/A9wB/wPrAf8D4wH/A9wB/wPXAf8DuQH/
+        A7cB/wGPAYIBVgH/Ac4BrAFgAf8BxQGlAV8B/wP7Af8QAAEJAZABvwH/AcMB7QH4Af8BswH0AfwB/wFC
+        AdwB9QH/ASYB1gH0Af8BjgHuAfoB/wE/AbQB5gH/AR0BjwHZAf8QAAHPAaoBhQH/BAAB5QHYAcwB/wHP
+        AaoBhQH/BAAB5QHYAcwB/wHPAaoBhQH/BAAB5QHYAcwB/wHPAaoBhQH/BAAB5QHYAcwB/wHPAaoBhQH/
+        BAAB5QHYAcwB/wHPAaoBhQH/EAADsQH/A/AB/wPkAf8D4gH/A+IB/wPnAf8DwQH/A9MB/xQAA+UB/wPX
+        Af8D7AH/A9oB/wHIAbMBpQH/AbsBlwFhAf8BzAG2AakB/wPlAf8D4wH/A78B/wGdAZEBggH/AcIBqgGJ
+        Af8B1wG3AY4B/wHmAd4B1AH/A/wB/xQAAREBugHkAf8BwwHtAfgB/wGzAfQB/AH/AUIB3AH1Af8BJgHW
+        AfQB/wGOAe4B+gH/AT8BtAHmAf8BHQGPAdkB/wwAAeUB2AHMAf8BzwGqAYUB/wQAAeUB2AHMAf8BzwGq
+        AYUB/wQAAeUB2AHMAf8BzwGqAYUB/wQAAeUB2AHMAf8BzwGqAYUB/wQAAeUB2AHMAf8BzwGqAYUB/wQA
+        AeUB2AHMAf8QAAO1Af8D8gH/A+gB/wPnAf8D6gH/A8YB/wPWAf8cAAPlAf8D1wH/A+wB/wG9AZcBXwH/
+        AdABxgG/Af8BuAGQAVgB/wPkAf8D7QH/AbABpQGYAf8B2QHGAawB/wHbAcQBpgH/AdUBxQGzAf8B9wH2
+        AfQB/wL9AfwB/xgAAREBugHkAf8BwwHtAfgB/wGzAfQB/AH/AUIB3AH1Af8BJgHWAfQB/wGOAe4B+gH/
+        AT8BtAHmAf8BHQGPAdkB/wwAAeUB2AHMAf8BzwGqAYUB/wQAAeUB2AHMAf8BzwGqAYUB/wQAAeUB2AHM
+        Af8BzwGqAYUB/wQAAeUB2AHMAf8BzwGqAYUB/wQAAeUB2AHMAf8BzwGqAYUB/xQAA7kB/wP0Af8D7AH/
+        A+0B/wPLAf8D2gH/JAAD5gH/AdcB1QHUAf8BrQFPAR0B/wGlAT8BDgH/AaEBOQEJAf8B5AHbAdUB/wG6
+        AbIBqAH/AckBvAGtAf8B1AHKAb4B/wHjAd0B1QH/AvwB+wH/JAABEQG6AeQB/wHDAe0B+AH/AbMB9AH8
+        Af8BSgHZAfUB/wFRAc8B8wH/ATsBnQHQAf8BVQGrAd0B/wExAZEByQH/BAABzwGqAYUB/wQAAeUB2AHM
+        Af8BzwGqAYUB/wQAAeUB2AHMAf8BzwGqAYUB/wQAAeUB2AHMAf8BzwGqAYUB/wQAAeUB2AHMAf8BzwGq
+        AYUB/wQAAeUB2AHMAf8BzwGqAYUB/xAAA70B/wP3Af8D7wH/A9AB/wPdAf8sAAHkAeIB4AH/AbABTwEZ
+        Af8BvwGHAUEB/wGpAUUBFgH/AcABqgGcAf8D5AH/OAABEQG6AeQB/wHDAe0B+AH/AagB4gH4Af8BTgGu
+        Ad0B/wGlAc8B9AH/AaUBzwH0Af8BvQHbAfcB/wE+AZgBzgH/AeUB2AHMAf8BzwGqAYUB/wQAAeUB2AHM
+        Af8BzwGqAYUB/wQAAeUB2AHMAf8BzwGqAYUB/wQAAeUB2AHMAf8BzwGqAYUB/wQAAeUB2AHMAf8BzwGq
+        AYUB/wQAAeUB2QHNAf8QAAPBAf8D9wH/A9UB/wPfAf8wAAP8Af8BtwFZASEB/wHHAZYBUAH/Aa8BUAEe
+        Af8B1wHKAcEB/0AAAREBugHkAf8BpwHUAfQB/wHFAeEB+AH/AcwB4wH5Af8BzAHjAfkB/wG9AdsB9wH/
+        ATMBkgHJAf8EAAHlAdgBzAH/Ac8BqgGFAf8EAAHlAdgBzAH/Ac8BqgGFAf8EAAHlAdgBzAH/Ac8BqgGF
+        Af8EAAHlAdgBzAH/Ac8BqgGFAf8EAAHlAdgBzAH/Ac8BqgGFAf8UAAPEAf8D2QH/A+MB/zQAA/wB/wG+
+        AYABKAH/Ac8BpQFdAf8BtwFbASgB/wHuAegB5AH/RAABMgGoAdkB/wFMAaUB2AH/AckB4QH3Af8BywHj
+        AfgB/wEkAZUBygH/AZUBuwHZAf8BzwGsAYgB/wQAAeUB2AHMAf8BzwGqAYUB/wQAAeUB2AHMAf8BzwGq
+        AYUB/wQAAeUB2AHMAf8BzwGqAYUB/wQAAeUB2AHMAf8BzwGqAYUB/wQAAeUB2QHNAf8B2QHCAasB/xAA
+        A8gB/wPlAf84AAP+Af8BwwGFAS0B/wHSAasBgAH/Ab0BgQEuAf8B8QHtAekB/0QAA/0B/wFJAbQB3QH/
+        ATQBlQHKAf8BMAGQAcgB/wE9Aa8B2AH/AfkB+gH7Af8B6wHjAdsB/wHQAbABjwH/BAAB5QHYAcwB/wHP
+        AaoBhQH/BAAB5QHYAcwB/wHPAaoBhQH/BAAB5QHYAcwB/wHPAaoBhQH/BAAB5QHYAcwB/wHOAasBhwH/
+        BAAB8gHuAeoB/xAAA+cB/0AAAecB2AHKAf8BwwGJATEB/wHXAbkBnQH/A/4B/2AAAe4B6AHiAf8B0AGw
+        AY8B/wQAAeUB2AHMAf8BzwGqAYUB/wQAAeUB2AHMAf8BzwGqAYUB/wQAAeUB2AHMAf8BzwGqAYUB/wQA
+        AegB3gHUAf8B5QHaAc4B/wQAAUIBTQE+BwABPgMAASgDAAFAAwABIAMAAQEBAAEBBgABARYAA/8BAAL/
+        BgAC/wYAAcABAwYAAcABAwYAAcABAwYAAcABAwYAAcABAwYAAcABAwYAAcABAwYAAcABAwYAAcABAwYA
+        AcABAwYAAcABAwYAAcABAwYAAv8GAAL/BgAB/wEPAfwD/wGSAUkB/wEHAfgBfwGDAf8BSQEkAfcBDwHw
+        AT8BgQH/ASQBkgHyAQ8B4AEbAYAB/wGSAUkB8AEfAcABCQGAAX8BSQEkAfABGQGAAQABgAE/ASQBkgHw
+        AQMCAAHgAR8BkgFJAfABBwIAAfABDwFJASQB8AEPAYABAAH4AQcBJAGSAfABHwHAAQAB/AEDAZIBSQHw
+        AT8B4AEDAf4BAQFJASQB8AF/AfABPwH/AQABJAGSAfAB/wHwAX8B/wGAAZIBSQHxAf8B8AF/Af8BwAFJ
+        ASQB8wH/AfABfwH/AcABJAGSAfcB/wH4AX8C/wGSAUkL
 </value>
   </data>
 </root>
