--- a/Spryt/Properties/Resources.resx
+++ b/Spryt/Properties/Resources.resx
@@ -151,6 +151,9 @@
   <data name="pencil" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Images\pencil.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="shaded" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Images\shaded.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="shading" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Images\shading.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
